@@ -82,7 +82,6 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Role::PluginBundle" => 0,
     "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
     "Dist::Zilla::Role::PluginBundle::PluginRemover" => 0,
-    "Dist::Zilla::Util::ConfigDumper" => 0,
     "Dist::Zilla::Util::CurrentCmd" => 0,
     "Moose" => 0,
     "Moose::Util::TypeConstraints" => 0,
@@ -183,7 +182,6 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Role::PluginBundle" => 0,
   "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
   "Dist::Zilla::Role::PluginBundle::PluginRemover" => 0,
-  "Dist::Zilla::Util::ConfigDumper" => 0,
   "Dist::Zilla::Util::CurrentCmd" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
