@@ -13,6 +13,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Changed / test requires]
  - Test::More 0.89 → 0
 
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
 2.025020 2016-06-19T07:19:45Z
  [Changed / test requires]
  - Test::DZil 0 → 5.038
